--- a/styles/index.scss
+++ b/styles/index.scss
@@ -23,9 +23,26 @@ body {
     margin: 0;
     font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 a {
     color: inherit;
     text-decoration: none;
 }
+
+body::-webkit-scrollbar {
+    width: 0.6em;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #000000;
+    border-radius: 20px;
+}
+
